syntax = "proto3";
package checkout;

import "pay.proto";
option go_package = "goshop/api/protobuf/checkout;checkoutpb";

service CheckoutService {
  rpc Checkout(ReqCheckout) returns (RspCheckout) {}
  rpc FlashCheckout(ReqFlashCheckout) returns (RspFlashCheckout) {}
}

message Address {
  string street_address = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  int32 zip_code = 5;
}

message ReqCheckout {
  uint32 user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  Address address = 5;
  pay.CreditCardInfo card_info = 6;
}

message RspCheckout {
  string order_id = 1;
  string transaction_id = 2;
}

message ReqFlashCheckout {
  uint32 user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  Address address = 5;
  pay.CreditCardInfo card_info = 6;

  uint32 product_id = 7;
  uint64 count = 8;
}

message RspFlashCheckout {
  string order_id = 1;
  string transaction_id = 2;
}
