syntax = "proto3";
package order;

import "cart.proto";
option go_package = "goshop/api/protobuf/order;orderpb";

service OrderService {
  rpc PlaceOrder(ReqPlaceOrder) returns (RspPlaceOrder) {}
  rpc ListOrder(ReqListOrder) returns (RspListOrder) {}
  rpc MarkOrderPaid(ReqMarkOrderPaid) returns (RspMarkOrderPaid) {}
}

message Address {
  string street_address = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  int32 zip_code = 5;
}

message OrderItem {
  cart.CartItem item = 1;
  float cost = 2;
}

message Order {
  repeated OrderItem order_items = 1;
  string order_id = 2;
  uint32 user_id = 3;
  string user_currency = 4;
  Address address = 5;
  string email = 6;
  int32 created_at = 7;
}

message OrderResult {
  string order_id = 1;
}

message ReqPlaceOrder {
  string token = 1;
  string user_currency = 2;

  Address address = 3;
  string email = 4;
  repeated OrderItem order_items = 5;
}

message RspPlaceOrder {
  OrderResult order_result = 1;
}

message ReqListOrder {
  string token = 1;
}

message RspListOrder {
  repeated Order orders = 1;
}

message ReqMarkOrderPaid {
  uint32 user_id = 1;
  string order_id = 2;
}

message RspMarkOrderPaid {
  int32 error_code = 1;
}

